[gd_scene load_steps=4 format=2]

[ext_resource path="res://IMG/gun.png" type="Texture" id=1]
[ext_resource path="res://Gun.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0416

[node name="Gun" type="Area2D" groups=["Guns"]]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.25 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 100, 100 )

[node name="Twr" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Sprite2" type="Sprite" parent="."]
self_modulate = Color( 0.701961, 0.666667, 0.666667, 1 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )
offset = Vector2( 0, -10 )
region_enabled = true
region_rect = Rect2( 100, 0, 100, 100 )

[node name="Position1" type="Position2D" parent="Sprite2"]
position = Vector2( 13.3333, -70 )
scale = Vector2( 3.33333, 3.33333 )

[node name="Position2" type="Position2D" parent="Sprite2"]
position = Vector2( -13.3333, -70 )
scale = Vector2( 3.33333, 3.33333 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
